[workspace]
members = [
    "src/bitbots_misc/bitbots_extrinsic_calibration",
    "src/bitbots_rust_test",
    "src/bitbots_navigation/bitbots_rust_nav",
    "src/bitbots_navigation/bitbots_path_planning"
]

# Optional but recommended for modern Cargo
resolver = "2"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"
