[workspace]
members = [
    "src/bitbots_misc/bitbots_extrinsic_calibration",
    "src/bitbots_rust_test",
    "src/bitbots_navigation/bitbots_rust_nav",
    "src/bitbots_navigation/bitbots_path_planning",
    "src/bitbots_lowlevel/bitbots_x02_joint_control",
]

# Optional but recommended for modern Cargo
resolver = "2"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"
