[workspace]
members = [
    "src/bitbots_misc/bitbots_extrinsic_calibration",
    "src/bitbots_misc/bitbots_bringup/tui",
    "src/bitbots_navigation/bitbots_global_planner"
]

# Optional but recommended for modern Cargo
resolver = "2"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"
debug = true
