<?xml version="1.0"?>
<package>
  <name>bitbots_animation</name>
  <version>1.0.0</version>
  <description>The bitbots_animation package provides an action server which interpolates keyframe animations and
  sends the next motor values to the motion.</description>

  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bitbots_common</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>humanoid_league_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>bitbots_common</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>humanoid_league_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>