<?xml version="1.0"?>
<package format="2">
  <name>bitbots_animation_server</name>
  <version>1.0.0</version>
  <description>The bitbots_animation_server package provides an action server which interpolates keyframe animations and
  sends the next motor values to the hardware control manager.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>humanoid_league_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <bitbots_documentation>
      <status>starts</status>
      <language>python3</language>
    </bitbots_documentation>
  </export>
</package>
