<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>bitbots_animation_server</name>
  <version>1.0.3</version>
  <description>The bitbots_animation_server package provides an action server which interpolates keyframe animations and
  sends the next motor values to the hardware control manager.</description>

  <maintainer email="6stelter@informatik.uni-hamburg.de">Sebastian Stelter</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>humanoid_league_msgs</depend>
  <depend>bitbots_splines</depend>
  <depend>bitbots_docs</depend>

  <export>
    <bitbots_documentation>
      <status>tested_integration</status>
      <language>python3</language>
    </bitbots_documentation>
    <build_type>ament_python</build_type>
  </export>
</package>
