<?xml version="1.0"?>
<package format="2">
  <name>bitbots_ball_filter</name>
  <version>0.0.0</version>
  <description>The Bitbots Ball Filter package</description>

  <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>dynamic_reconfigure</depend>


  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
