<?xml version="1.0"?>
<package format="2">
  <name>bitbots_ball_filter</name>
  <version>0.0.0</version>
  <description>The Bitbots Ball Filter package</description>

  <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>humanoid_league_msgs</depend>
  <depend>dynamic_reconfigure</depend>


  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
