<?xml version="1.0"?>
<package format="2">
  <name>bitbots_ball_filter</name>
  <version>0.0.0</version>
  <description>The Bitbots Ball Filter package</description>

  <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>


  <license>MIT</license>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>humanoid_league_msgs</depend>
	

  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>unknown</status>
    </bitbots_documentation>
    <build_type>ament_python</build_type>
  </export>
  
</package>
