<?xml version="1.0"?>
<package>
  <name>bitbots_base_footprint</name>
  <version>0.1.0</version>
  <description>publishes a transform to the base footprint of the robot, currently based on the orientation of the lower foot,
  in the future this is going to be based on the imu readings</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
    <bitbots_documentation>
      <language>python2</language>
      <status>starts</status>
    </bitbots_documentation>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
