<?xml version="1.0"?>
<package format="2">
  <name>bitbots_bezier_pathfinding</name>
  <version>0.0.0</version>
  <description>The bitbots_bezier_pathfinding uses
	bezier curves for pathfinding
  </description>

  <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>
