<?xml version="1.0"?>
<package format="2">
  <name>bitbots_bezier_pathfinding</name>
  <version>0.0.0</version>
  <description>The bitbots_bezier_pathfinding uses
	bezier curves for pathfinding
  </description>

  <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>

  <export>
    <bitbots_documentation>
      <status>tested_viz</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>
