<?xml version="1.0"?>
<package format="2">
    <name>bitbots_blackboard</name>
    <version>1.3.1</version>
    <description>The bitbots_blackboard is used to share information
        between the different classes in the behaviour. It consists
        of several capsules each for there own purpose. For example
        there is a team_data_capsule dealing with messages received
        from other robots, a world_model_capsule containing various
        information about objects (balls, goals) on the field and a
        blackboard capsule containing general information about the
        state of actions or perceptions by the robot.
    </description>

    <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
    <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
    <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>

    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>bio_ik_msgs</exec_depend>
    <exec_depend>humanoid_league_msgs</exec_depend>    
    <exec_depend>bitbots_msgs</exec_depend>



    <export>
        <bitbots_documentation>
            <status>unknown</status>
            <language>python2</language>
        </bitbots_documentation>
    </export>
</package>
