<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bitbots_blackboard</name>
    <version>1.5.3</version>
    <description>The bitbots_blackboard is used to share information
        between the different classes in the behaviour. It consists
        of several capsules each for there own purpose. For example
        there is a team_data_capsule dealing with messages received
        from other robots, a world_model_capsule containing various
        information about objects (balls, goals) on the field and a
        misc capsule containing general information about the
        state of actions or perceptions by the robot.
    </description>

    <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
    <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
    <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

    <license>MIT</license>

    <build_depend>bitbots_docs</build_depend>
    <depend>bitbots_tf_listener</depend>
    <depend>bitbots_utils</depend>
    <depend>python3-numpy</depend>
    <depend>rclpy</depend>
    <depend>tf_transformations</depend>
    <exec_depend>bio_ik_msgs</exec_depend>
    <exec_depend>bitbots_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>soccer_vision_3d_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>

    <export>
        <bitbots_documentation>
            <status>unknown</status>
            <language>python3</language>
        </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
