<?xml version="1.0"?>
<package format="2">
  <name>bitbots_body_behavior</name>
  <version>0.9.5</version>
  <description>The bitbots_body_behavior package determines the
        behavior of the robot including strategy decisions and
        kick or walk actions. The node controls the walking indirecty via
        /navigation_goal or directly via /cmd_vel and the head behavior
        via /head_duty.</description>

  <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>

  <exec_depend>humanoid_league_msgs</exec_depend>
  <exec_depend>dynamic_stack_decider</exec_depend>
  <exec_depend>bitbots_blackboard</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <bitbots_documentation>
      <status>starts</status>
      <language>python2</language>
    </bitbots_documentation>
  </export>
</package>
