<?xml version="1.0"?>
<package>
  <name>bitbots_body_behaviour</name>
  <version>0.0.0</version>
  <description>The bitbots_body_behaviour package determines the
        behaviour of the robot including strategy decisions and
        kick or walk actions. The node controls the walking indirecty via
        /navigation_goal or directly via /cmd_vel and the head behaviour
        via /head_duty.</description>

  <maintainer email="7engelke@informatik.uni-hamburg.de">Timon Engelke</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_league_msgs</build_depend>
  <build_depend>bitbots_stackmachine</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>humanoid_league_msgs</run_depend>
  <run_depend>bitbots_stackmachine</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <bitbots_documentation>
      <status>compiles</status>
      <language>python3</language>
    </bitbots_documentation>
  </export>
</package>
