<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>bitbots_bringup</name>
  <version>2.3.1</version>
  <description>The bitbots_bringup package is a collection of util classes used in many ROS packages from
  the Hamburg Bit-Bots.</description>

  <maintainer email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>bitbots_docs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
     <bitbots_documentation>
      <status>unknown</status>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
