<?xml version='1.0' encoding='utf-8'?>
<package format="2">
    <name>bitbots_bringup</name>
    <version>2.3.1</version>
    <description>The bitbots_bringup hosts the main launch files for the Hamburg Bit-Bots code base.</description>

    <maintainer email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</maintainer>
    <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
    <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>bitbots_docs</depend>

    <exec_depend>bitbots_basler_camera</exec_depend>
    <exec_depend>bitbots_dynup</exec_depend>
    <exec_depend>bitbots_quintic_walk</exec_depend>
    <exec_depend>bitbots_ros_control</exec_depend>
    <exec_depend>bitbots_utils</exec_depend>
    <exec_depend>bitbots_vision</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>wolfgang_webots_sim</exec_depend>
    <exec_depend>xacro</exec_depend>
    <!-- <exec_depend>bitbots_body_behavior</exec_depend> -->
    <!-- <exec_depend>bitbots_dynamic_kick</exec_depend> -->
    <!-- <exec_depend>bitbots_hcm</exec_depend> -->
    <!-- <exec_depend>bitbots_head_behavior</exec_depend> -->
    <!-- <exec_depend>bitbots_localization</exec_depend> -->

    <export>
        <bitbots_documentation>
            <status>unknown</status>
        </bitbots_documentation>
        <build_type>ament_cmake</build_type>
    </export>
</package>
